import java.util.ArrayList;

public class App {
  public class Main {
    public static void main(String[] args) {
      Management management = new Management(new ArrayList<Document>());
      management.menu();
    }
  }
}
