@startuml
hide empty methods
hide empty fields

class App {
    + main()
}
class Arraylist{}

class DocumentManagement {
    - Arraylist<Document> documents
    + run()
    + addDocument()
    + searchDocument()
    + printAllDocuments()
}

abstract Document {
    - String title
    - Arraylist<String> authors
    - String yearOfPublication;
    - String type
    - Arraylist<String> keywords

    + createNewDocument()
    + updateDocument()
    + deleteDocument()
    + printDocument()
}

class Book {
    + super(title, authors, yearOfPublication, type, keywords);
}

class Article {
    + super(title, authors, yearOfPublication, type, keywords);
}

class Magazine {
    + super(title, authors, yearOfPublication, type, keywords);
}

class Paper {
    + super(title, authors, yearOfPublication, type, keywords);
}

class SearchDocument{
    + search()
    - searchByTitle()
    - searchByAuthor()
    - searchByYearOfPublication()
    - searchByType()
    - searchByKeywords()
}

class SearchEngine{}

class Author {
    - id
    - String name
    - String alias
}

class Keyword {
    - id
    - String word
}



App -- DocumentManagement
DocumentManagement -- Document
DocumentManagement -- SearchEngine

SearchEngine -- SearchDocument
SearchEngine -- Author
SearchEngine -- Keyword

Document -- Book
Document -- Article
Document -- Magazine
Document -- Paper

DocumentManagement .. Arraylist
Document .. Arraylist
@enduml